# Mutant

./: .cursorignore  .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION.md  PLAN.md  PROGRESS.md  PUBLIC_UPLOAD_IMPLEMENTATION.md  README.md  REFACTOR_PLAN.md  RESUMABLE_UPLOADS_PLAN.md  SETUP.md  SIMPLIFY_PLAN.md  TODO  TODO.md  install.sh  setup  setup.ps1  setup.sh
.cursor/rules/: comments.mdc
.github/workflows/: ci.yml
anthill-cli/: Cargo.toml
anthill-cli/src/: app.rs  cli.rs  commands.rs  main.rs
anthill-cli/src/callbacks/: get.rs  init.rs  mod.rs  progress.rs  put.rs
anthill-lib/: Cargo.toml
anthill-lib/src/: events.rs  lib.rs
anthill-lib/src/anthill/: mod.rs  remove_logic.rs  store_logic.rs  update_logic.rs
anthill-lib/src/pad_manager/: mod.rs  read.rs  util.rs  write.rs
anthill-lib/src/pad_manager/write/: reservation.rs
anthill-lib/src/storage/: init.rs  network.rs
anthill-lib/tests/: anthill_test.rs
docs/: ant_wallet.md  memory_allocator_design.md
docs/mutant_lib/: api_reference.md  architecture.md  best_practices.md  core_concepts.md  getting_started.md  internals.md  overview.md  usage.md
docs/mutant_lib/internals/: concurrency.md  data_structures.md  error_handling.md  operation_flows.md  pad_manager.md  storage_layer.md
mutant-cli/: CHANGELOG.md  Cargo.toml  README.md
mutant-cli.bak/src/: cli.rs  history.rs
mutant-cli.bak/src/callbacks/: get.rs  mod.rs  purge.rs  put.rs  sync.rs
mutant-cli.bak/src/commands/: export.rs  get.rs  health_check.rs  import.rs  mod.rs  purge.rs  remove.rs
mutant-cli/src/: app.rs  cli.rs  commands.rs  history.rs  main.rs  terminal.rs  utils.rs
mutant-cli/src/callbacks/: get.rs  health_check.rs  init.rs  mod.rs  progress.rs  purge.rs  put.rs  sync.rs
mutant-cli/src/commands/: daemon.rs  export.rs  get.rs  health_check.rs  import.rs  ls.rs  mod.rs  mv.rs  purge.rs  put.rs  remove.rs  reserve.rs  reset.rs  rm.rs  stats.rs  sync.rs  tasks.rs
mutant-client/: Cargo.toml  README.md
mutant-client/src/: error.rs  lib.rs  macros.rs  message.rs  native.rs  request.rs  response.rs  wasm.rs
mutant-daemon/: Cargo.toml
mutant-daemon/src/: app.rs  error.rs  handler.rs  main.rs  protocol.rs  wallet.rs
mutant-daemon/src/colony/: mod.rs
mutant-daemon/src/handlers/: colony.rs  common.rs  data_operations.rs  dispatcher.rs  filesystem.rs  http_video.rs  import_export.rs  key_management.rs  metadata.rs  mod.rs  system_operations.rs  task_management.rs  transcoding.rs  video_stream.rs  websocket.rs
mutant-lib/: Cargo.toml
mutant-lib/src/: cache.rs  error.rs  events.rs  internal_error.rs  internal_events.rs  lib.rs  types.rs
mutant-lib/src/api/: init.rs  mod.rs  mutant.rs
mutant-lib/src/data/: chunking.rs  error.rs  integration_tests.rs  manager.rs  mod.rs  ops.rs  storage_mode.rs
mutant-lib/src/data/ops/: common.rs  fetch.rs  fetch_public.rs  mod.rs  remove.rs  store.rs  store_public.rs  update_public.rs
mutant-lib/src/index/: error.rs  integration_tests.rs  manager.rs  master_index.rs  mod.rs  pad_info.rs  persistence.rs  query.rs  structure.rs  traits.rs
mutant-lib/src/index/master_index/: core.rs  import_export.rs  key_management.rs  mod.rs  pad_management.rs  public_keys.rs  status.rs  tests.rs  utils.rs
mutant-lib/src/mutant/: data_structures.rs  mod.rs  remove_logic.rs  store_logic.rs  update_logic.rs
mutant-lib/src/network/: adapter.rs  client.rs  error.rs  get.rs  integration_tests.rs  mod.rs  put.rs  wallet.rs
mutant-lib/src/ops/: mod.rs  worker.rs
mutant-lib/src/ops/get/: mod.rs
mutant-lib/src/ops/health_check/: mod.rs
mutant-lib/src/ops/purge/: mod.rs
mutant-lib/src/ops/put/: context.rs  mod.rs  operations.rs  pipeline.rs  task.rs  tests.rs
mutant-lib/src/ops/sync/: mod.rs
mutant-lib/src/ops/utils/: mod.rs
mutant-lib/src/ops/worker/: async_task.rs  builder.rs  config.rs  error.rs  mod.rs  pool.rs  worker.rs
mutant-lib/src/pad_lifecycle/: cache.rs  error.rs  import.rs  integration_tests.rs  manager.rs  mod.rs  pool.rs  prepare.rs  verification.rs
mutant-lib/src/pad_manager/: delete.rs  mod.rs  read.rs  util.rs  write.rs
mutant-lib/src/pad_manager/write/: concurrent.rs  reservation.rs
mutant-lib/src/storage/: error.rs  init.rs  integration_tests.rs  manager.rs  mod.rs  network.rs  pad_io.rs
mutant-lib/src/utils/: retry.rs
mutant-lib/tests/: mutant_test.rs
mutant-protocol/: Cargo.toml
mutant-protocol/src/: lib.rs
mutant-web/: Cargo.toml  index.css  index.html  index.js  package-lock.json  package.json  pnpm-lock.yaml  video_player.js
mutant-web/src/: cam_test.rs  init.rs  lib.rs  map.rs
mutant-web/src/app/: base.rs  bases.rs  blueprint.rs  blueprints.rs  buildings.rs  chart.rs  client_manager.rs  colony_window.rs  context.rs  download_window.rs  flights.rs  fs.rs  fs_window.rs  infobar.rs  inventory.rs  loading.rs  login.rs  main.rs  mod.rs  notifications.rs  orders.rs  overview.rs  planet.rs  planet_list.rs  put.rs  research.rs  ship.rs  ships.rs  stats.rs  tasks.rs  theme.rs  trades.rs  window_system.rs
mutant-web/src/app/components/: file_picker.rs  focusable.rs  mod.rs  multimedia.rs  progress.rs
mutant-web/src/app/components/chart/: candlestick_chart.rs  item_selector.rs  mod.rs  order_list.rs  price_display.rs  scale_selector.rs  utils.rs
mutant-web/src/app/fs/: download.rs  global.rs  internal_tab.rs  mod.rs  tree.rs  viewer_tab.rs
mutant-web/src/map/: bases.rs  cursor_world_position.rs  egui.rs  flights.rs  select_planet.rs  stationned_ships.rs  toggle_visibility.rs
mutant-web/src/map/setup/: camera.rs  mod.rs  scene.rs
mutant-web/src/utils/: console_log.rs  download.js  download_utils.rs  error.rs  game_wrapper.rs  mod.rs  socket.rs  video_buffer.js  video_buffer.rs  video_player.js
scripts/: manage_local_testnet.sh  run_tests_with_env.sh
