[package]
name = "anthill-cli"
version = "0.1.1"
edition = "2024"

[dependencies]
anthill-lib = { path = "../anthill-lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
log = "0.4.21"
env_logger = "0.11.3"
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }
indicatif = { version = "0.17.8", features = ["tokio"] }
dialoguer = "0.11.0"
humansize = "2.1.0"
nu-ansi-term = "0.50.0"
bincode = "2.0.1"
sha256 = "1.6.0"
hex = "0.4"
chrono = "0.4"

# Internal workspace dependencies