[package]
name = "mutant-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
env_logger = "0.11"
indicatif = "0.17"
log = "0.4"
mutant-client = { path = "../mutant-client" }
mutant-lib = { path = "../mutant-lib" }
mutant-protocol = { path = "../mutant-protocol" }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
