[package]
name = "mutant"
version = "0.6.2"
edition = "2024"
license = "LGPL-3.0-only"
description = "Command-line interface for MutAnt distributed mutable key value storage over Autonomi network"
repository = "https://github.com/Champii/MutAnt"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
env_logger = "0.11"
indicatif = "0.17"
log = "0.4"
mutant-client = { path = "../mutant-client", version = "0.6.2" }
mutant-protocol = { path = "../mutant-protocol", version = "0.6.2" }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
humansize = "2.1"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pretty-duration = "0.1.1"
