[package]
name = "mutant-client"
version = "0.6.0-dev"
edition = "2024"

[dependencies]
mutant-protocol = { path = "../mutant-protocol", version = "0.6.0-dev"}

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.16", features = ["v4", "serde", "js"] } # uuid needs getrandom for v4
futures-util = { version = "0.3", default-features = false, features = ["sink", "alloc"] } # Minimal features
futures = { version = "0.3", features = ["alloc"] }
url = "2.5"
thiserror = "1.0"
ewebsock = "0.8" # Add WebSocket abstraction library

# WASM-specific dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4" # Required by tracing-wasm/console_log
console_error_panic_hook = "0.1"

# Native-specific dependencies (conditional compilation)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }

[dependencies.web-sys]
version = "0.3"
features = [
# Removed WebSocket related features, handled by ewebsock
#  'WebSocket',
#  'MessageEvent',
#  'ErrorEvent',
#  'CloseEvent',
#  'BinaryType',
  'Blob',
  'FileReader',
  'Location', # To potentially get default URL origin
  'console', # For logging via web console
]

# Removed CLI specific dependencies and [[bin]] section

[lib]
crate-type = ["cdylib", "rlib"]