[package]
name = "mutant-daemon"
version = "0.6.0-dev"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
directories = "5.0"
env_logger = "0.11"
log = "0.4"
mutant-lib = { path = "../mutant-lib", version = "0.6.0-dev" }
mutant-protocol = { path = "../mutant-protocol", version = "0.6.0-dev" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4", "serde"] }
warp = "0.3"
xdg = "2.5"

futures-util = "*"
lockfile = "0.4.0"
