[package]
name = "mutant-lib"
version = "0.3.0"
edition = "2021"
license = " LGPL-3.0-only"
description = "Core library for MutAnt distributed mutable key value storage over Autonomi network"
repository = "https://github.com/Champii/MutAnt" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mutant_lib"
path = "src/lib.rs"

[dependencies]
autonomi = "0.4.3" # never change this for the git.
async-stream = "0.3.5"
blsttc = "8.0.2"
bytes = "1.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
dirs = "5.0"
env_logger = "0.11.3"
futures = "0.3.30"
hex = "0.4.3"
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_cbor = "0.11"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tokio-stream = "0.1"
thiserror = "1.0"
tokio-retry = "0.3"
async-trait = "0.1"
once_cell = "1.19"
sha2 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
hkdf = "0.12"
ring = "0.17"
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
# assert_matches = "1.5" # Removed
dialoguer = "0.11.0"
indicatif = { version = "0.17.7", features = ["tokio"] }
clap = { version = "4.4.8", features = ["derive"] }
pretty_env_logger = "0.5.0"
serial_test = "3.0.0"
tempfile = "3.10.1"

[features]
default = []
