[package]
name = "mutant-protocol"
version = "0.6.2"
edition = "2021"
license = "LGPL-3.0-only"
description = "Protocol definitions for MutAnt distributed mutable key value storage over Autonomi network"
repository = "https://github.com/Champii/MutAnt"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
thiserror = "1.0"
